--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-    mainModule = 'com.amadeus.cyt'
-    mainClass = 'com.amadeus.cyt.CytSetup'
+    mainModule = 'com.santosh.cyt'
+    mainClass = 'com.santosh.prj.CytSetup'
 }
 
 javafx {
@@ -46,7 +46,7 @@ test {
 jar {
     manifest {
         attributes(
-                'Main-Class': 'com.amadeus.cyt.CytSetup'
+                'Main-Class': 'com.santosh.prj.CytSetup'
         )
     }
 }
